<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/currency_currency"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editTextCurrency"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/currency_currency_edit_text" />

    <TextView
        android:id="@+id/textViewRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/currency_rate"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editTextRate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:text="@string/currency_rate_edit_text" />


    <TextView
        android:id="@+id/textViewSingDollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/currency_singapore_dollars"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editTextSingDollar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:text="@string/currency_sing_dollar_edit_text" />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/currency_convert_button" />

    <TextView
        android:id="@+id/textViewConvert"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="22sp" />


</LinearLayout>