<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.singaporetech.travelapp.MainActivity">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/destinationScrollView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/destinationScrollView"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerTextView">

        <TextView
            android:id="@+id/bodyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_body" />
    </ScrollView>

    <Button
        android:id="@+id/temperatureConverterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/temperature_converter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destinationScrollView" />

    <Button
        android:id="@+id/currencyConverterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currency_converter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureConverterButton" />

    <Button
        android:id="@+id/emailFriendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_friend"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyConverterButton" />


</androidx.constraintlayout.widget.ConstraintLayout>